fix: search bar stretching on large screens

--- a/src/screens/HomeScreen/HomeScreen.module.css
+++ b/src/screens/HomeScreen/HomeScreen.module.css
@@ -30,9 +30,10 @@
 
 .inputBar {
   background: #ffffff;
-  padding: 10px 20px;
+  padding: 16px 32px;
   padding-right: 10px;
   width: 60%;
+  max-width: 960px;
   margin: 0 auto;
   display: flex;
   align-items: center;
